# strong_id

./: .editorconfig  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yaml  typeid_spec.yaml
strong_id/: Cargo.toml
strong_id/src/: base32.rs  dynamic.rs  lib.rs
strong_id_macros/: Cargo.toml
strong_id_macros/src/: lib.rs
tests/smoke_test/: Cargo.toml
tests/typeid_spec/: Cargo.toml
tests/typeid_spec/src/: main.rs
