[package]
name = "strong_id_macros"
version = "0.1.0"
edition = "2021"
description = "strong_id_macros"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
delimited = []
serde = []
uuid = []
uuid-v1 = []
uuid-v3 = []
uuid-v4 = []
uuid-v5 = []
uuid-v6 = []
uuid-v7 = []
uuid-v8 = []
