[package]
name = "strong_id_macros"
version = "0.2.0"
edition = "2021"
description = "Macros for the strong_id crate"
license = "Apache-2.0 OR MIT"
authors = [
  "Tyrone Tudehope<tyronetudehope@gmail.com>",
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
delimited = []
serde = []
uuid = []
uuid-v1 = []
uuid-v3 = []
uuid-v4 = []
uuid-v5 = []
uuid-v6 = []
uuid-v7 = []
uuid-v8 = []
