[package]
name = "typeid_spec"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libtest-mimic = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v7"] }

[dependencies.strong_id]
path = "../../strong_id"
default-features = false
features = ["typeid"]
